update the status of the restore request
Update the status of the restore service.
