# cmd/models/restore_model.go
@@ -24,7 +24,7 @@ func CreateRestore(restore *restoreservice.Restoreresult) error {
 }
 
 func createRestore(ctx context.Context, db *sql.DB, restore *restoreservice.Restoreresult) error {
-	query := "INSERT INTO restores(created_at, id, name, namespace, backup_name, storage_secret) VALUES(?, ?, ?, ?, ?, ?)"
+	query := "INSERT INTO restores(created_at, id, name, namespace, backup_location, storage_secret) VALUES(?, ?, ?, ?, ?, ?)"
 	stmt, err := db.PrepareContext(ctx, query)
 	if err != nil {
 		return err
@@ -34,8 +34,8 @@ func createRestore(ctx context.Context, db *sql.DB, restore *restoreservice.Rest
 	results, err := stmt.ExecContext(ctx,
 		restore.CreatedAt,
 		restore.ID,
-		restore.DestinationName,
-		restore.DestinationNamespace,
+		restore.Name,
+		restore.Namespace,
 		restore.BackupLocation,
 		restore.StorageSecret,
 	)
@@ -66,7 +66,7 @@ func GetRestore(restore *restoreservice.Restoreresult) error {
 }
 
 func getRestore(ctx context.Context, db *sql.DB, restore *restoreservice.Restoreresult) error {
-	query := "SELECT created_at, updated_at, deleted_at, id, name, namespace, backup_name, storage_secret FROM restores WHERE id = ?"
+	query := "SELECT created_at, updated_at, deleted_at, id, name, namespace, backup_location, storage_secret, kubernetes_object, db FROM restores WHERE id = ?"
 	row := db.QueryRowContext(ctx, query, restore.ID)
 
 	if err := row.Scan(
@@ -74,14 +74,85 @@ func getRestore(ctx context.Context, db *sql.DB, restore *restoreservice.Restore
 		&restore.UpdatedAt,
 		&restore.DeletedAt,
 		&restore.ID,
-		&restore.DestinationName,
-		&restore.DestinationNamespace,
+		&restore.Name,
+		&restore.Namespace,
 		&restore.BackupLocation,
 		&restore.StorageSecret,
+		&restore.KubernetesResource,
+		&restore.Database,
 	); err != nil {
-		log.Println("error reading responses")
+		log.Printf("error reading responses; %+v\n", err)
 		return err
 	}
 
 	return nil
+}
+
+// UpdateRestore updates a restore object in the database
+func UpdateRestore(restore *restoreservice.Restoreresult) (int64, error) {
+	db, err := connect()
+	if err != nil {
+		return 0, err
+	}
+
+	return updateRestore(context.Background(), db, restore)
+}
+
+func updateRestore(ctx context.Context, db *sql.DB, restore *restoreservice.Restoreresult) (int64, error) {
+	query := `UPDATE restores SET updated_at = ?, backup_location = ?, storage_secret = ?, kubernetes_object = ?, db = ? WHERE id = ?`
+	stmt, err := db.PrepareContext(ctx, query)
+	if err != nil {
+		return 0, err
+	}
+	defer db.Close()
+	defer stmt.Close()
+
+	results, err := stmt.ExecContext(ctx,
+		restore.UpdatedAt,
+		restore.BackupLocation,
+		restore.StorageSecret,
+		restore.KubernetesResource,
+		restore.Database,
+		restore.ID,
+	)
+	if err != nil {
+		return 0, err
+	}
+
+	return results.RowsAffected()
+}
+
+// DeleteRestore updates a restore object in the database
+func DeleteRestore(restore *restoreservice.Restoreresult) (int64, error) {
+	db, err := connect()
+	if err != nil {
+		return 0, err
+	}
+
+	return deleteRestore(context.Background(), db, restore)
+}
+
+func deleteRestore(ctx context.Context, db *sql.DB, restore *restoreservice.Restoreresult) (int64, error) {
+	query := `UPDATE restores SET updated_at = ?, deleted_at = ?, backup_location = ?, storage_secret = ?, kubernetes_object = ?, db = ? WHERE id = ?`
+	stmt, err := db.PrepareContext(ctx, query)
+	if err != nil {
+		return 0, err
+	}
+	defer db.Close()
+	defer stmt.Close()
+
+	results, err := stmt.ExecContext(ctx,
+		restore.UpdatedAt,
+		restore.DeletedAt,
+		restore.BackupLocation,
+		restore.StorageSecret,
+		restore.KubernetesResource,
+		restore.Database,
+		restore.ID,
+	)
+	if err != nil {
+		return 0, err
+	}
+
+	return results.RowsAffected()
 }
